--- a/src/styles/travels.sass
+++ b/src/styles/travels.sass
@@ -1,7 +1,7 @@
 .travels
 
   .travels-banner
-    background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1701772986/IMG_2801_rhzock.jpg")
+    background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704309028/xqhzxqs9isasjw5lyqrk.jpg")
 
   .travels-list
     display: flex
@@ -11,7 +11,7 @@
     gap: 10px
 
     @media only screen and (min-width: 480px)
-      padding: 1rem 20%
+      // padding: 1rem 20%
 
     .travels-new
       height: 100px
