--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -1,2 +1,9 @@
 .about-banner
   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704400410/IMG_1406_f5w5q4.jpg")
+
+// .about-image1
+//   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704480299/IMG_1473_blpnda.jpg")
+
+// mont saint michel
+.about-image1
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704395151/IMG_1579_qhq4c7.jpg")
