photos and more texts added

--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -7,3 +7,6 @@
 // mont saint michel
 .about-image1
   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704395151/IMG_1579_qhq4c7.jpg")
+
+.about-image2
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704491522/IMG_2023_01_18-17_40_44_3950_9DC5A4B6_uh3rnq.jpg")
