--- a/src/App.sass
+++ b/src/App.sass
@@ -84,3 +84,24 @@ p a
       
 hr
   border-top: 1px solid black
+
+.images-container
+  display: flex
+  flex-wrap: wrap
+  gap: 10px
+  list-style-type: none
+  padding: 1rem
+
+  li
+    height: 300px
+    cursor: pointer
+    position: relative
+    flex-grow: 1
+    flex: 1 1 auto
+
+    img
+      object-fit: cover
+      width: 100%
+      height: 100%
+      vertical-align: middle
+      border-radius: 5px
