component hamburger added

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,2 +1,6 @@
 .home-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1701765847/IMG_4377_mmbalx.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704480299/IMG_1473_blpnda.jpg")
+
+// zingaro reserve
+// .home-banner
+//   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1701765847/IMG_4377_mmbalx.jpg")
