--- a/src/App.sass
+++ b/src/App.sass
@@ -105,3 +105,31 @@ hr
       height: 100%
       vertical-align: middle
       border-radius: 5px
+
+.navigation-sticky
+  position: fixed
+  top: 0
+  width: calc(100% - 2rem)
+  animation-duration: 0.7s
+  animation-name: fadeInDown
+  animation-timing-function: ease-out
+  background-color: rgba(255,255,255, 0.9)
+  backdrop-filter: blur(5px)
+  box-shadow: rgba(81, 102, 121, 0.1) 0px 1px 0px
+  ///box-shadow: 0 0 5px 10px rgba(255,255,255, 0.6)
+
+  a.nav-link, span.nav-link, span.nav-logo a
+    color: black
+    font-weight: 400
+
+  div.hamburger div
+    background-color: black
+
+@keyframes fadeInDown
+  0%
+    opacity: 0
+    transform: translateY(-20px)
+
+  100%
+    opacity: 1
+    transform: translateY(0)
