--- a/src/styles/navigation.sass
+++ b/src/styles/navigation.sass
@@ -13,41 +13,20 @@
   display: flex
   justify-content: space-between
 
-  .nav-link
-    padding: 12px 20px
-    vertical-align: sub
+  .nav-links
+    @media only screen and (max-width: 870px)
+      display: none
 
-  .nav-link:hover
-    color: #f9b862
+    .nav-link
+      padding: 12px 20px
+      vertical-align: sub
 
-  .nav-signout
-    cursor: pointer
+    .nav-link:hover
+      color: #f9b862
+
+    .nav-signout
+      cursor: pointer
 
   .nav-logo a
     font-size: 1.5rem
     font-weight: 400
-
-.sticky
-  position: fixed
-  top: 0
-  width: calc(100% - 2rem)
-  animation-duration: 0.7s
-  animation-name: fadeInDown
-  animation-timing-function: ease-out
-  background-color: rgba(255,255,255, 0.9)
-  backdrop-filter: blur(5px)
-  box-shadow: rgba(81, 102, 121, 0.1) 0px 1px 0px
-  ///box-shadow: 0 0 5px 10px rgba(255,255,255, 0.6)
-
-  a, span
-    color: black
-    font-weight: 400
-
-@keyframes fadeInDown
-  0%
-    opacity: 0
-    transform: translateY(-20px)
-
-  100%
-    opacity: 1
-    transform: translateY(0)
