dropdown menu done

--- a/src/App.sass
+++ b/src/App.sass
@@ -31,11 +31,17 @@ h2
   justify-content: center
   align-items: center
 
+  div
+    padding: 0 10px
+
 .banner-headline
   color: white
   font-size: 4rem
   font-weight: 400
   text-transform: uppercase
+
+  @media only screen and (max-width: 480px)
+    font-size: 3rem
 
 .banner-subheadline
   color: white
