--- a/src/styles/navigation.sass
+++ b/src/styles/navigation.sass
@@ -30,3 +30,15 @@
   .nav-logo a
     font-size: 1.5rem
     font-weight: 400
+
+.nav-dropdown-menu
+  display: flex
+  flex-direction: column
+  padding-top: 20px
+
+  a, span
+    padding-top: 20px
+    padding-bottom: 20px
+
+.nav-wrapper-mobile
+  background-color: rgba(255,255,255, 0.9)
