home page content done

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,5 +1,14 @@
+
 .home-banner
   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704480299/IMG_1473_blpnda.jpg")
+
+.home1-banner
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704574535/FullSizeRender_ybomwu.jpg")
+
+.home2-banner
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704364947/qi2z9g2yrmql3jwaiub7.jpg")
+
+
 
 // zingaro reserve
 // .home-banner
