--- a/src/App.sass
+++ b/src/App.sass
@@ -2,7 +2,6 @@
   text-align: center
   position: relative
   min-height: 100vh
-  // max-width: 1790px
   margin: auto
   letter-spacing: .36px
 
@@ -22,6 +21,7 @@ h2
   padding: 0
 
 .banner
+  position: relative
   background-position: center center
   background-repeat: no-repeat
   background-size: cover
@@ -122,7 +122,6 @@ hr
   background-color: rgba(255,255,255, 0.9)
   backdrop-filter: blur(5px)
   box-shadow: rgba(81, 102, 121, 0.1) 0px 1px 0px
-  ///box-shadow: 0 0 5px 10px rgba(255,255,255, 0.6)
 
   a.nav-link, span.nav-link, span.nav-logo a
     color: black
