years array fetched from database

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -6,6 +6,9 @@
   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704574535/FullSizeRender_ybomwu.jpg")
 
 .home2-banner
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704740165/IMG_6477_tqogbz.jpg")
+
+.home3-banner
   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704364947/qi2z9g2yrmql3jwaiub7.jpg")
 
 
