--- a/src/App.sass
+++ b/src/App.sass
@@ -53,7 +53,7 @@ h2
 .text-container
   max-width: 1050px
   margin: auto
-  padding: 50px 16.6% 50px 8%
+  padding: 50px 20%
 
   @media only screen and (max-width: 480px)
     padding: 3rem 0
