--- a/src/styles/travels.sass
+++ b/src/styles/travels.sass
@@ -7,7 +7,7 @@
     display: flex
     flex-direction: column
     margin: auto
-    padding: 10px
+    padding: 10px 0
     gap: 10px
 
     @media only screen and (min-width: 480px)
@@ -20,7 +20,7 @@
 
     .travels-link-container
 
-      .travels-img
+      .travels-container
         height: 30vh
         position: relative
 
