--- a/src/styles/travelsFilter.sass
+++ b/src/styles/travelsFilter.sass
@@ -1,10 +1,30 @@
 div.travels-filter-wrapper
-  position: absolute
-  bottom: 2rem
-  padding: 2rem
-  border: 1px solid white
-  color: white
-  background-color: rgba(255, 255, 255, 0.1)
+  // position: absolute
+  // bottom: 2rem
+  // padding: 2rem
+  // border: 1px solid white
+  // color: white
+  // background-color: rgba(255, 255, 255, 0.1)
 
-  p
-    margin-top: 0
+  // p
+  //   margin-top: 0
+
+  div
+    padding: 0 10px
+
+    ul
+      display: flex
+      width: 100%
+      justify-content: center
+      padding: 0
+      flex-wrap: wrap
+      gap: 10px
+
+      li
+        list-style-type: none
+        cursor: pointer
+        padding: 10px 20px
+        border: 1px solid black
+
+.year-active
+  background-color: #f9b862
