filtering according to years and countries fixed

--- a/src/styles/travelsFilter.sass
+++ b/src/styles/travelsFilter.sass
@@ -1,13 +1,4 @@
 div.travels-filter-wrapper
-  // position: absolute
-  // bottom: 2rem
-  // padding: 2rem
-  // border: 1px solid white
-  // color: white
-  // background-color: rgba(255, 255, 255, 0.1)
-
-  // p
-  //   margin-top: 0
 
   div
     padding: 0 10px
@@ -26,5 +17,5 @@ div.travels-filter-wrapper
         padding: 10px 20px
         border: 1px solid black
 
-.year-active
+.selection-active
   background-color: #f9b862
