filter hidden on toggle button

--- a/src/styles/travels.sass
+++ b/src/styles/travels.sass
@@ -3,6 +3,20 @@
   .travels-banner
     background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704309028/xqhzxqs9isasjw5lyqrk.jpg")
 
+    div.travels-filter-text
+      position: absolute
+      color: white
+      bottom: 30px
+      font-size: 1.4rem
+      border: 1px solid white
+      padding: 10px 70px
+      cursor: pointer
+      background-color: rgba(0,0,0,0.2)
+      letter-spacing: 3.36px
+
+    div.travels-filter-text:hover
+      background-color: rgba(255, 255, 255, 0.2)
+
   .travels-list
     display: flex
     flex-direction: column
