upload form component - added deleting and drag and drop in preview

--- a/src/App.sass
+++ b/src/App.sass
@@ -112,6 +112,12 @@ hr
       vertical-align: middle
       border-radius: 5px
 
+    button
+      cursor: pointer
+      position: absolute
+      z-index: 2
+      right: 0
+
 .navigation-sticky
   position: fixed
   top: 0
