--- a/src/styles/uploadForm.sass
+++ b/src/styles/uploadForm.sass
@@ -27,3 +27,14 @@
 
   li
     cursor: grabbing
+
+.main-image-preview
+  position: relative
+  width: 300px
+  margin: auto
+
+  button
+    position: absolute
+    right: 0
+    cursor: pointer
+    z-index: 2
