cleaned after unsuccessful attemp of using sendgrip with firebase - paid solution needed

--- a/src/styles/newsletterForm.sass
+++ b/src/styles/newsletterForm.sass
@@ -9,7 +9,7 @@
       padding: 15px
       border-radius: 6px
       width: 70%
-      border: 1px solid #bdb9b6
+      border: 1px solid #f9b862
       font-size: 1rem
       display: block
 
@@ -28,4 +28,4 @@
 
   .email-form input:focus
     outline: none
-    border: 1px solid #f9b862
+    // border: 1px solid #bdb9b6
