fixed bug with naming of the travels

--- a/src/styles/lightboxComponentsStyles/customButtons.sass
+++ b/src/styles/lightboxComponentsStyles/customButtons.sass
@@ -6,21 +6,21 @@
   padding: 20px
 
 .lightbox-icon-left
-  left: 10px
+  left: 0
   top: 50%
   transform: translateY(-50%)
   width: 40px
   height: 40px
 
 .lightbox-icon-right
-  right: 10px
+  right: 0
   top: 50%
   transform: translateY(-50%)
   width: 40px
   height: 40px
 
 .lightbox-icon-close
-  right: 10px
-  top: 10px
+  right: 0
+  top: 0
   width: 30px
   height: 30px
