new data structure is working in travel component

--- a/src/styles/uploadForm.sass
+++ b/src/styles/uploadForm.sass
@@ -15,8 +15,13 @@
     align-items: center
 
     .form-btn
-      padding: 1rem
+      padding: 1.5rem
       cursor: pointer
+      background-color: #417a89
+      color: white
+      border: 1px solid #417a89
+      border-radius: 25px
+      font-size: 1.2rem
 
     textarea
       width: 500px
@@ -41,3 +46,6 @@
 
 .form-error
   color: red
+
+.form-header
+  padding: 70px 0 20px
