--- a/src/styles/travel.sass
+++ b/src/styles/travel.sass
@@ -1,4 +1,5 @@
 .travel-map-container
-  max-width: 700px
-  padding: 16px
+  width: calc(100% - 32px)
+  height: 80vh
+  padding: 16px 0
   margin: auto
