Zdena component done with real data, q_30 param deleted from image URLs

--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -1,12 +1,11 @@
+// Zdena Omaha Beach
 .about-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704400410/IMG_1406_f5w5q4.jpg")
-
-// .about-image1
-//   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704480299/IMG_1473_blpnda.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023166/IMG_1406_oibzlg.jpg")
 
 // mont saint michel
 .about-image1
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704395151/IMG_1579_qhq4c7.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023185/IMG_1579_hqqxsn.jpg")
 
+// Luca a Filip na Kanarech zady
 .about-image2
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704491522/IMG_2023_01_18-17_40_44_3950_9DC5A4B6_uh3rnq.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023199/IMG_2023_01_18-17_40_44_3950_9DC5A4B6_megwhn.jpg")
