--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,15 +1,19 @@
 
+// Luca zady ve Francii
 .home-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704480299/IMG_1473_blpnda.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023175/IMG_1473_dn48tf.jpg")
 
+// zapad slunce s Lucou v dodavce chorvatsko
 .home1-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704574535/FullSizeRender_ybomwu.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023142/FullSizeRender_byuphg.jpg")
 
+// Filip v garazi v Dirne
 .home2-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704740165/IMG_6477_tqogbz.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023220/IMG_6477_rywgpg.jpg")
 
+// Luca v Saint Malo
 .home3-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704364947/qi2z9g2yrmql3jwaiub7.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023152/IMG_0701_oagint.jpg")
 
 
 
