--- a/src/styles/travels.sass
+++ b/src/styles/travels.sass
@@ -1,7 +1,8 @@
 .travels
 
+  // Bretan - surf
   .travels-banner
-    background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704309028/xqhzxqs9isasjw5lyqrk.jpg")
+    background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023160/IMG_0989_zcli8k.jpg")
 
     div.travels-filter-text
       position: absolute
