--- a/src/styles/zdena.sass
+++ b/src/styles/zdena.sass
@@ -1,2 +1,3 @@
+// Zdena v Toskansku
 .zdena-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1704477924/IMG_2984_nhve9j.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023231/IMG_2984_ljh5uw.jpg")
