change of images

--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -1,6 +1,6 @@
-// Zdena Omaha Beach
+// Filip v Bretani
 .about-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023166/IMG_1406_oibzlg.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706179884/IMG_2245_to1ht8.jpg")
 
 // mont saint michel
 .about-image1
