--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,7 +1,6 @@
-
-// Luca zady ve Francii
+// Zdena Omaha Beach
 .home-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023175/IMG_1473_dn48tf.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023166/IMG_1406_oibzlg.jpg")
 
 // zapad slunce s Lucou v dodavce chorvatsko
 .home1-banner
@@ -13,10 +12,4 @@
 
 // Luca v Saint Malo
 .home3-banner
-  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706023152/IMG_0701_oagint.jpg")
-
-
-
-// zingaro reserve
-// .home-banner
-//   background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1701765847/IMG_4377_mmbalx.jpg")
+  background-image: url("https://res.cloudinary.com/dnwbnhdof/image/upload/c_scale,w_auto/dpr_auto/v1706181579/IMG_0701_u4zfha.jpg")
