--- a/src/App.sass
+++ b/src/App.sass
@@ -61,6 +61,9 @@ button
   @media only screen and (max-width: 480px)
     padding: 3rem 0
 
+.text-container-no-space
+  padding: 50px 20% 0
+
 .text-content
   text-align: left
   max-width: 750px
